@@ -20,6 +20,8 @@ import java.io.File;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.rmi.RemoteException;
+import java.sql.ResultSet;
+import java.sql.SQLException;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Calendar;
@@ -73,7 +75,10 @@ import de.jost_net.JVerein.rmi.Projekt;
 import de.jost_net.JVerein.util.Dateiname;
 import de.jost_net.JVerein.util.JVDateFormatTTMMJJJJ;
 import de.willuhn.datasource.GenericObject;
+import de.willuhn.datasource.pseudo.PseudoIterator;
 import de.willuhn.datasource.rmi.DBIterator;
+import de.willuhn.datasource.rmi.DBService;
+import de.willuhn.datasource.rmi.ResultSetExtractor;
 import de.willuhn.jameica.gui.AbstractControl;
 import de.willuhn.jameica.gui.AbstractView;
 import de.willuhn.jameica.gui.Action;
@@ -545,7 +550,7 @@ public class BuchungsControl extends AbstractControl
         "((startdatum is null or startdatum <= ?) and (endedatum is null or endedatum >= ?))",
         new Object[] { buchungsDatum, buchungsDatum });
     list.setOrder("ORDER BY bezeichnung");
-    projekt = new SelectInput(list, getBuchung().getProjekt());
+    projekt = new SelectInput(PseudoIterator.asList(list), getBuchung().getProjekt());
     projekt.setValue(getBuchung().getProjekt());
     projekt.setAttribute("bezeichnung");
     projekt.setPleaseChoose("Bitte auswählen");
@@ -670,24 +675,58 @@ public class BuchungsControl extends AbstractControl
     liste.add(b2);
     
     unterdrueckunglaenge = Einstellungen.getEinstellung().getUnterdrueckungLaenge();
-    Buchungsart bua;
-    BuchungQuery query;
-    Calendar cal = Calendar.getInstance();
-    Date db = cal.getTime();
-    cal.add(Calendar.MONTH, -unterdrueckunglaenge);
-    Date dv = cal.getTime();
-    while (list.hasNext())
+    if (unterdrueckunglaenge > 0)
     {
-      bua = list.next();
-      if (unterdrueckunglaenge > 0)
+      final DBService service = Einstellungen.getDBService();
+      Calendar cal = Calendar.getInstance();
+      Date db = cal.getTime();
+      cal.add(Calendar.MONTH, - unterdrueckunglaenge);
+      Date dv = cal.getTime();
+      String sql = "SELECT buchungsart.* from buchungsart, buchung ";
+      sql += "WHERE buchung.buchungsart = buchungsart.id ";
+      sql += "AND buchung.datum >= ? AND buchung.datum <= ? ";
+      sql += "ORDER BY nummer";
+      Logger.debug(sql);
+      ResultSetExtractor rs = new ResultSetExtractor()
       {
-        query = new BuchungQuery(dv, db, null, bua, null, "", "", null);
-        if (query.get().isEmpty())
+        @Override
+        public Object extract(ResultSet rs) throws RemoteException, SQLException
         {
-          continue;
+          ArrayList<Buchungsart> list = new ArrayList<Buchungsart>();
+          while (rs.next())
+          {
+            list.add(
+              (Buchungsart) service.createObject(Buchungsart.class, rs.getString(1)));
+          }
+          return list;
+        }
+      };
+      @SuppressWarnings("unchecked")
+      ArrayList<Buchungsart> ergebnis = (ArrayList<Buchungsart>) service.execute(sql,
+          new Object[] { dv, db }, rs);
+      int size = ergebnis.size();
+      Buchungsart bua;
+      for (int i = 0; i < size; i++)
+      {
+        bua = ergebnis.get(i);
+        liste.add(bua);
+        for (int j = i + 1; j < size; j++)
+        {
+          if (bua.getNummer() == ergebnis.get(j).getNummer())
+          {
+            ergebnis.remove(j);
+            j--;
+            size--;
+          }
         }
       }
-      liste.add(bua);
+    }
+    else
+    {
+      while (list.hasNext())
+      {
+        liste.add(list.next());
+      }
     }
     
     int bwert = settings.getInt(BUCHUNGSART, -2);
@@ -791,7 +830,7 @@ public class BuchungsControl extends AbstractControl
       {
         starteCSVExport();
       }
-    }, null, true, "code.png"); // "true" defines this button as the default
+    }, null, true, "xsd.png"); // "true" defines this button as the default
     return b;
   }
 
@@ -866,7 +905,7 @@ public class BuchungsControl extends AbstractControl
               break;
           }
           
-          b_steuer.setBuchungsart(new Long(b_art.getSteuerBuchungsart().getID()));
+          b_steuer.setBuchungsart(Long.valueOf(b_art.getSteuerBuchungsart().getID()));
           b_steuer.setBetrag(steuer.doubleValue());
           b_steuer.setZweck(b.getZweck() + zweck_postfix);          
           b_steuer.setSplitId(b.getSplitId());
@@ -985,7 +1024,7 @@ public class BuchungsControl extends AbstractControl
       Projekt projekt = (Projekt) getProjekt().getValue();
       if (null == projekt)
         return null;
-      Long id = new Long(projekt.getID());
+      Long id = Long.valueOf(projekt.getID());
       return id;
     }
     catch (RemoteException ex)
@@ -1003,7 +1042,7 @@ public class BuchungsControl extends AbstractControl
       Buchungsart buchungsArt = (Buchungsart) getBuchungsart().getValue();
       if (null == buchungsArt)
         return null;
-      Long id = new Long(buchungsArt.getID());
+      Long id = Long.valueOf(buchungsArt.getID());
       return id;
     }
     catch (RemoteException ex)
@@ -1838,6 +1877,7 @@ public class BuchungsControl extends AbstractControl
       return value;
     }
 
+    @SuppressWarnings("unused")
     public void setValue(Boolean value)
     {
       this.value = value;
@@ -1848,6 +1888,7 @@ public class BuchungsControl extends AbstractControl
       return text;
     }
 
+    @SuppressWarnings("unused")
     public void setText(String text)
     {
       this.text = text;
